--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,18 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+archive_name=Immersive Vehicles
+forge_version=14.23.5.2859
+interface_group=mcinterface1122
+mappings_channel=stable
+mappings_version=39-1.12
+mc_version=1.12.2
+mod_group=minecrafttransportsimulator
+mod_id=mts
+mod_version=21.1M.1-BETA1
+
+# mixins
+mixin_tweaker=org.spongepowered.asm.launch.MixinTweaker
+mixin_config=mts.mixins.json
+mixin_refmap=mts.refmap.json
