--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,10 @@ compileJava {
     options.compilerArgs << "-Xlint:deprecation" << "-Xlint:unchecked"
 }
 
+mixin {
+    add sourceSets.main, "mts.refmap.json"
+}
+
 //Minecraft mappings and run configs.
 minecraft {
     // The mappings can be changed at any time, and must be in the following format.
@@ -75,41 +79,41 @@ dependencies {
     //Minecraft to use.
     minecraft "net.minecraftforge:forge:${project.mc_version}-${project.forge_version}"
 
-    //Set sound code bits as embeds so they are included into the jar.
-    embed("com.googlecode.soundlibs:jlayer:1.0.1.4")
-    embed("org.jcraft:jorbis:0.0.17")
-
+    //Shade mixin so that it is added to the jar
     shade("org.spongepowered:mixin:0.8.5") {
         transitive = false
     }
-
     annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
+
+    //Set sound code bits as embeds so they are included into the jar.
+    embed("com.googlecode.soundlibs:jlayer:1.0.1.4")
+    embed("org.jcraft:jorbis:0.0.17")
 
     //Compile against the JEI API but do not include it at runtime
     compileOnly fg.deobf("mezz.jei:jei_1.12.2:4.16.1.302:api")
     //At runtime, use the full JEI jar
     //Disabled as Access Transformers don"t work on FG 3.0 runtimes despite them saying they do.
-    //Not a huge issue, as it just prevents using JEI in-dev, and we already have it working so don't really need to test.
+    //Not a huge issue, as it just prevents using JEI in-dev, and we already have it working so don"t really need to test.
     //runtimeOnly fg.deobf("mezz.jei:jei_1.12.2:4.16.1.302")
 }
 
-mixin {
-    add sourceSets.main, project.mixin_refmap
-}
-
-processResources {
-    filesMatching(["InterfaceLoader.java", "mcmod.info"]) {
-        expand "@VERSION@": project.mod_version
-        expand "@MODID@": project.mod_id
-    }
-}
-
-//Here is where we zip up all embeds and add them to our jar.
 jar {
-    from {
-        configurations.embed.collect { it.isDirectory() ? it : zipTree(it) }
+    //Zip all embeds and add them to the jar
+    configurations.embed.each { dependency ->
+        from(project.zipTree(dependency)) {
+            dependency.isDirectory() ? dependency : zipTree(dependency)
+        }
     }
 
+    //Move the mixin libraries' license to the right directory and remove unneeded things
+    configurations.shade.each { shadeJar ->
+        from(project.zipTree(shadeJar)) {
+            rename("LICENSE.txt", "org/spongepowered/LICENSE.txt")
+            exclude(["META-INF/*.SF", "META-INF/*.RSA", "META-INF/*.MF", "**/*.html"])
+        }
+    }
+
+    //Add properties required for mixins to the manifest
     manifest {
         attributes([
                 "FMLCorePlugin"              : "${project.interface_group}.MtsLoadingPlugin",
@@ -125,6 +129,6 @@ jar {
 //Now compile the mod.
 jar.finalizedBy("reobfJar")
 
-tasks.withType(JavaCompile).configureEach {
+tasks.withType(JavaCompile) {
     options.encoding = "UTF-8" // Use the UTF-8 charset for Java compilation
 }
