Correct naming and fixing some versions and stuff

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,19 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+# mod
 archive_name=Immersive Vehicles
-forge_version=14.23.5.2860
-interface_group=mcinterface1122
-mappings_channel=stable
-mappings_version=39-1.12
-mc_version=1.12.2
-mod_group=minecrafttransportsimulator
 mod_id=mts
 mod_version=22.1M.1-BETA1
+interface_group=mcinterface1122
+mod_group=minecrafttransportsimulator
+mts_coremod=mcinterface1122.core.MtsCoreMod
+
+# MC/Forge
+mc_version=1.12.2
+mappings_channel=stable
+mappings_version=39-1.12
+forge_version=14.23.5.2860
 
 # mixins
 mixin_tweaker=org.spongepowered.asm.launch.MixinTweaker
