--- a/build.gradle
+++ b/build.gradle
@@ -44,16 +44,16 @@ minecraft {
         client {
             workingDirectory file("run")
             //Tell the game to load the core mod class so that mixins will run
-            property "fml.coreMods.load", "${project.interface_group}.MtsLoadingPlugin"
+            property "fml.coreMods.load", project.mts_coremod
             //Use the default mixin tweaker
-            property "tweakClass", "org.spongepowered.asm.launch.MixinTweaker"
+            property "tweakClass", project.mixin_tweaker
         }
 
         //Run the server in a different directory so that the run directory isn't a mess
         server {
             workingDirectory file("runServer")
-            property "fml.coreMods.load", "${project.interface_group}.MtsLoadingPlugin"
-            property "tweakClass", "org.spongepowered.asm.launch.MixinTweaker"
+            property "fml.coreMods.load", project.mts_coremod
+            property "tweakClass", project.mixin_tweaker
         }
     }
 }
@@ -79,12 +79,12 @@ dependencies {
     minecraft "net.minecraftforge:forge:${project.mc_version}-${project.forge_version}"
 
     //Set sound code bits and mixin as embeds so they are included into the jar.
-    embed("org.spongepowered:mixin:0.8.3-SNAPSHOT") {
+    embed("org.spongepowered:mixin:0.8.5") {
         exclude module: "guava"
         exclude module: "commons-io"
         exclude module: "gson"
     }
-    annotationProcessor "org.spongepowered:mixin:0.8.3-SNAPSHOT:processor"
+    annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
 
     embed("com.googlecode.soundlibs:jlayer:1.0.1.4")
     embed("org.jcraft:jorbis:0.0.17")
@@ -110,7 +110,7 @@ jar {
     //Add properties required for mixins to the manifest
     manifest {
         attributes([
-                "FMLCorePlugin"              : "${project.interface_group}.MtsLoadingPlugin",
+                "FMLCorePlugin"              : project.mts_coremod,
                 "FMLCorePluginContainsFMLMod": true,
                 "ForceLoadAsMod"             : true,
                 "TweakClass"                 : project.mixin_tweaker,
