--- a/mcinterfaceforge1122/gradle.properties
+++ b/mcinterfaceforge1122/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.daemon=false
 # mod
 archive_name=Immersive Vehicles
 mod_id=mts
-mod_version=22.2.0-BETA12-C
+mod_version=22.2.0-BETA12-E
 interface_group=mcinterface1122
 mod_group=minecrafttransportsimulator
 mts_coremod=mcinterface1122.core.MtsCoreMod
