--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           sudo apt update ; DEBIAN_FRONTEND=noninteractive sudo apt install -y openjdk-8-jdk
           export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
+          chmod +x ./gradlew
           PULL_DEPS=1 ./gradlew buildForge1.12.2
       - name: Publish Artifact
         uses: actions/upload-artifact@v2
