Basic mixin setup for GameRenderer injection

--- a/mcinterfaceforge1165/build.gradle
+++ b/mcinterfaceforge1165/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
     repositories {
         maven { url = "https://maven.minecraftforge.net" }
-				maven { url = "https://maven.parchmentmc.org" }
+        maven { url = "https://maven.parchmentmc.org" }
         mavenCentral()
     }
     dependencies {
         classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "5.1.+", changing: true
-				classpath "org.parchmentmc:librarian:1.+"
+        classpath "org.parchmentmc:librarian:1.+"
     }
 }
 
@@ -34,7 +34,7 @@ minecraft {
     // stable     #          Stables are built at the discretion of the MCP team.
     // official   MCVersion  Official field/method names from Mojang mapping files
     //mappings channel: "official", version: "1.16.5"
-		mappings channel: "parchment", version: "2022.03.06-1.16.5"
+    mappings channel: "parchment", version: "2022.03.06-1.16.5"
 
     //Run configurations.
     runs {
@@ -63,7 +63,7 @@ configurations {
 dependencies {
     //Minecraft to use.
     minecraft "net.minecraftforge:forge:1.16.5-36.2.23"
-    
+
     //Core to use.
     embed(project(":mccore"))
 
@@ -77,6 +77,15 @@ dependencies {
 jar {
     from {
         configurations.embed.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+
+    manifest {
+        attributes([
+                "TweakClass"    : "org.spongepowere.dasm.launch.MixinTweaker",
+                "TweakOrder"    : "0",
+                "MixinConfigs"  : "mts.mixins.json",
+                "MixinConnector": "mcinterface1165.mixin.MixinConnector"
+        ])
     }
 }
 
