--- a/mcinterfaceforge1165/gradle.properties
+++ b/mcinterfaceforge1165/gradle.properties
@@ -14,5 +14,11 @@ mts_coremod=mcinterface1165.core.MtsCoreMod
 # MC/Forge
 mc_version=1.16.5
 mappings_channel=parchment
-mappings_version=2022.03.06-1.16.5
+mappings_version=2022.03.06
 forge_version=36.2.23
+
+# mixins
+mixin_tweaker=org.spongepowere.dasm.launch.MixinTweaker
+mixin_config=mts.mixins.json
+mixin_refmap=mts.refmap.json
+mixin_connector=mcinterface1165.mixin.MixinConnector
