--- a/mcinterfaceforge1165/gradle.properties
+++ b/mcinterfaceforge1165/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.daemon=false
 # mod
 archive_name=Immersive Vehicles
 mod_id=mts
-mod_version=22.6.0-BETA
+mod_version=22.7.0
 interface_group=mcinterface1165
 mod_group=minecrafttransportsimulator
 mts_coremod=mcinterface1165.core.MtsCoreMod
