--- a/mcinterfaceforge1122/gradle.properties
+++ b/mcinterfaceforge1122/gradle.properties
@@ -15,4 +15,5 @@ mc_version=1.12.2
 mappings_channel=stable
 mappings_version=39-1.12
 forge_version=14.23.5.2860
-jei_version=1.12.2:4.16.1.302
+jei_api_version=jei_1.12.2:4.16.1.302:api
+jei_run_version=jei_1.12.2:4.16.1.302
