--- a/mcinterfaceforge1165/gradle.properties
+++ b/mcinterfaceforge1165/gradle.properties
@@ -15,7 +15,8 @@ mc_version=1.16.5
 mappings_channel=parchment
 mappings_version=2022.03.06
 forge_version=36.2.34
-jei_version=1.16.5:7.7.1.152
+jei_api_version=jei-1.16.5:7.7.1.152:api
+jei_run_version=jei-1.16.5:7.7.1.152
 
 # mixins
 mixin_tweaker=org.spongepowere.dasm.launch.MixinTweaker
