--- a/mcinterfaceforge1165/gradle.properties
+++ b/mcinterfaceforge1165/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.daemon=false
 # mod
 archive_name=Immersive Vehicles
 mod_id=mts
-mod_version=22.9.0
+mod_version=22.10.0-BETA
 interface_group=mcinterface1165
 mod_group=minecrafttransportsimulator
 
