--- a/mcinterfaceforge1122/gradle.properties
+++ b/mcinterfaceforge1122/gradle.properties
@@ -11,7 +11,7 @@ interface_group=mcinterface1122
 mod_group=minecrafttransportsimulator
 
 # MC/Forge
-mc_version=1.12.2
+minecraft_version=1.12.2
 mappings_channel=stable
 mappings_version=39-1.12
 forge_version=14.23.5.2860
