--- a/mcinterfaceforge1165/build.gradle
+++ b/mcinterfaceforge1165/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "5.1.+", changing: true
+        classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "6.0.+", changing: true
         classpath group: "org.parchmentmc", name: "librarian", version: "1.+"
         classpath group: "org.spongepowered", name: "mixingradle", version: "0.7.+"
     }
@@ -17,6 +17,8 @@ apply plugin: "net.minecraftforge.gradle"
 apply plugin: "org.parchmentmc.librarian.forgegradle"
 apply plugin: "org.spongepowered.mixin"
 apply plugin: "eclipse"
+apply plugin: "idea"
+
 
 //Set file name.
 version = "${project.mc_version}-${project.mod_version}"
